manifests/service-tescodle.yaml
apiVersion: v1
kind: Service
metadata:
  name: tescodle-service
  namespace: tescodle
spec:
  selector:
    app: tescodle
  ports:
    - protocol: TCP
      name: http
      port: 80        
      targetPort: 80
      nodePort: 30084
  type: NodePort
