manifests/ingress-tescodle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tescodle-ingress
  namespace: tescodle 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: tescodle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tescodle-service
            port:
              number: 80
